# PokemonChampions

./: .gitignore  README.md  build_launcher.ps1  pyproject.toml
assets/pokemon_templates/: template_metadata.json
champions_assistant/: __init__.py  adb.py  benchmark_vision.py  cli.py  config.py  damage.py  data_loader.py  debug_tools.py  emulator.py  evaluation.py  fast_preview.py  health.py  models.py  ocr.py  paths.py  preview_recognition.py  recommender.py  roi.py  screen_resources.py  state_machine.py  templates.py  type_chart.py  ui.py  vision_config.py  vision_engine.py
config/: app.toml  vision.toml
data/: aliases.json  metadata.json  moves.json  pokemon.json  type_chart.json
dataset/: README.md  official_missing_data.json
dataset/pending/batch_20260624_2shots/: manifest.json  review.html
dataset/pending/batch_20260624_2shots_v2/: manifest.json  review.html
dataset/pending/batch_20260624_2shots_v3/: manifest.json  review.html
dataset/source_official_sprite/: pokemon.html  sprite_poke_2.css
docs/: VISION_ENGINE.md  VISION_OPTIMIZATION_SUMMARY.md
launcher/: PokemonChampionsAssistantLauncher.cs
resources/screens/: battle_active.toml  result_screen.toml  team_preview.toml
tests/: test_adb.py  test_battle_models.py  test_cli.py  test_config_and_data.py  test_damage.py  test_dataset_pipeline_official.py  test_debug_tools.py  test_evaluation.py  test_fast_preview.py  test_health.py  test_preview_recognition.py  test_recommender.py  test_screen_resources.py  test_state_machine.py  test_templates.py  test_type_chart.py  test_vision_config.py
(+5 files in other folders)
