[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-champions-assistant"
version = "0.1.0"
description = "Local Windows battle assistant for Pokemon Champions on Android emulators."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Pokemon Champions Assistant" }]
dependencies = []

[project.optional-dependencies]
ui = ["PySide6>=6.7"]
vision = ["numpy>=1.26", "opencv-python>=4.9"]
ocr = ["rapidocr-onnxruntime>=1.3"]
test = ["pytest>=8.0"]

[project.scripts]
champions-assistant = "champions_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["champions_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
